# broll-organizer

./: LICENSE  README.md  main.py  pyproject.toml
src/broll/: __init__.py  analyzer.py  chat.py  cli.py  config.py  db.py  embeddings.py  frames.py  metadata.py  scanner.py  search.py
src/broll/web/: app.py
src/broll/web/static/: browse.js  style.css
src/broll/web/templates/: base.html  browse.html  chat.html  search_results.html  video_detail.html
